Resolve the issue that caused by drop down menu out of the boundary

--- a/src/App.less
+++ b/src/App.less
@@ -23,39 +23,38 @@ a {
     .box-shadow-style();
     .nav-bar-set {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       align-items: center;
-      margin: 0.5rem;
-    }
-    .avatar {
-      .hover-style();
-      cursor: pointer;
-    }
-    .toggle {
-      position: relative;
-      margin-left: 0.4rem;
-      width: 1.5rem;
-      height: 1.5rem;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      &::after {
-        content: '\25BC';
-        transition: all 0.1s linear;
+      height: 100%;
+      margin-right: 0.5rem;
+      .menu {
+        
       }
-      &.up {
-        &::after {
-          transform: rotate(180deg);
+      .user-info {
+        display: flex;
+        align-items: center;
+        .avatar {
+          .hover-style();
+          cursor: pointer;
         }
-      }
-      .drop-down-list {
-        position: absolute;
-        transform: translate3d(0, 100%, 0);
-        .box-shadow-style();
-        background: white;
-        .item {
-
+        .arrow {
+          position: relative;
+          margin-left: 0.4rem;
+          width: 1.5rem;
+          height: 1.5rem;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: flex-end;
+          &::after {
+            content: '\25BC';
+            transition: all 0.1s linear;
+          }
+          &.up {
+            &::after {
+              transform: rotate(180deg);
+            }
+          }
         }
       }
     }
