--- a/src/components/modal/PopUpModal.less
+++ b/src/components/modal/PopUpModal.less
@@ -9,7 +9,7 @@
     position: relative;
     top: 20%;
     left: 15%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     width: 70vw;
     height: 70vh;
